--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,8 +8,14 @@ kotlin = "1.9.0"
 androidx-core = "1.12.0"
 androidx-appcompat = "1.6.1"
 androidx-constraintlayout = "2.1.4"
+androidxLifecycle = "2.6.2"
 ui-material = "1.9.0"
+ui-fastAdapter = "5.7.0"
 navigation-version = "2.7.3"
+hilt = "2.48"
+
+kotlinxSerializationJson = "1.5.1"
+kotlinxCoroutines = "1.7.1"
 
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -26,13 +32,30 @@ org-jetbrains-kotlin-android = "1.9.0"
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidx-core" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
 androidx-constrainLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "androidx-constraintlayout" }
+androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "androidxLifecycle" }
+androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
+
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
+
 
 ui-material = { group = "com.google.android.material", name = "material", version.ref = "ui-material" }
 ui-view-binding = { module = "com.github.kirich1409:viewbindingpropertydelegate", version = "1.5.6" }
 ui-component-dots = { module = "com.tbuonomo:dotsindicator", version = "4.3" }
 
+ui-fastAdapter-core = { module = "com.mikepenz:fastadapter", version.ref = "ui-fastAdapter" }
+ui-fastAdapter-binding = { module = "com.mikepenz:fastadapter-extensions-binding", version.ref = "ui-fastAdapter" }
+ui-coil-kt = { group = "io.coil-kt", name = "coil", version = "2.2.2" }
+
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-version" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-version" }
+
+okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version = "4.11.0" }
+retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version = "2.9.0" }
+retrofit-kotlin-serialization = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version = "1.0.0" }
+
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 
 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -41,20 +64,24 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 
 
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "gradlePlugin" }
+
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 
 
 [bundles]
 androidx = ["androidx-core", "androidx-appcompat"]
 androidx-navigation = ["navigation-fragment", "navigation-ui"]
+ui-fastAdapter = ["ui-fastAdapter-core", "ui-fastAdapter-binding"]
 
 [plugins]
 #src
 android-application = { id = "com.android.application", version.ref = "gradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "gradlePlugin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
 
 
